--- a/s4/B193333/Makefile
+++ b/s4/B193333/Makefile
@@ -5,6 +5,6 @@ all:
 	javac TestCase.java -classpath "../.."
 run:
 #	java -classpath "../.." s4.B193333/Hello
-	java -classpath "../.." s4.B193333/Frequencer
-#	java -classpath "../.." s4.B193333/InformationEstimator
+#	java -classpath "../.." s4.B193333/Frequencer
+	java -classpath "../.." s4.B193333/InformationEstimator
 #	java -classpath "../.." s4.B193333/TestCase
